# machine_translation-sarvamai

./: .gitignore  pyproject.toml  sarvam.ipynb  sarvam_IN22.ipynb  sarvam_flores.ipynb  translations_sarvam_flores.json
