[project]
name = "mt-sarvam"
version = "0.1.0"
description = "Machine Translation using the Sarvam-ai Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "python-dotenv>=1.1.1",
    "sacrebleu>=2.5.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]
